[metadata]
name = backend
version = 1.0.0
url = 
license = BSD-3-Clause
maintainer = Brian E. Peterson
maintainer_email = brian.e.peterson@colorado.edu
description = 
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    backend
